# rippit

./: Cargo.toml  scratch.http
src/: lib.rs  main.rs  models.rs
src/models/: redditor.rs  submission.rs  subreddit.rs
