[package]
name = "rippit"
version = "0.1.0"
authors = ["Joseph Knight <josephforrestknight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", feature = ["derive"] }
serde_json = "1.0"
